feat: Currency with Signals

--- a/projects/blue-forest/src/app/app.component.html
+++ b/projects/blue-forest/src/app/app.component.html
@@ -1,3 +1,12 @@
 <as-a-santos></as-a-santos>
 
+<div>
+  <bf-currency-switcher></bf-currency-switcher>
+  <bf-product
+    [name]="'Consulting Services'"
+    [price]="400"
+    [currency]="currency()"
+  ></bf-product>
+</div>
+
 <router-outlet />
